[TestTokenizer/should_correctly_mark_attributes/for_double_quotes_attribute - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(4),
    },
    {
        "OnAttribName",
        int(5),
        int(8),
    },
    {
        "OnAttribData",
        int(10),
        int(11),
    },
    {
        "OnAttribEnd",
        parser.QuoteType(3),
        int(12),
    },
    {
        "OnOpenTagEnd",
        int(13),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_correctly_mark_attributes/for_no_quotes_attribute - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(4),
    },
    {
        "OnAttribName",
        int(5),
        int(8),
    },
    {
        "OnAttribData",
        int(9),
        int(12),
    },
    {
        "OnAttribEnd",
        parser.QuoteType(1),
        int(12),
    },
    {
        "OnOpenTagEnd",
        int(13),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_correctly_mark_attributes/for_no_value_attribute - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(4),
    },
    {
        "OnAttribName",
        int(5),
        int(12),
    },
    {
        "OnAttribEnd",
        parser.QuoteType(0),
        int(12),
    },
    {
        "OnOpenTagEnd",
        int(13),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_correctly_mark_attributes/for_single_quotes_attribute - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(4),
    },
    {
        "OnAttribName",
        int(5),
        int(8),
    },
    {
        "OnAttribData",
        int(10),
        int(11),
    },
    {
        "OnAttribEnd",
        parser.QuoteType(2),
        int(12),
    },
    {
        "OnOpenTagEnd",
        int(13),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_handle_entities/for_XML_entities - 1]
[][]interface {}{
    {
        "OnTextEntity",
        int32(38),
        int(5),
    },
    {
        "OnTextEntity",
        int32(62),
        int(9),
    },
    {
        "OnText",
        int(9),
        int(13),
    },
    {
        "OnTextEntity",
        int32(60),
        int(17),
    },
    {
        "OnText",
        int(17),
        int(23),
    },
    {
        "OnTextEntity",
        int32(97),
        int(29),
    },
    {
        "OnText",
        int(29),
        int(34),
    },
    {
        "OnTextEntity",
        int32(99),
        int(39),
    },
    {
        "OnText",
        int(39),
        int(49),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_handle_entities/for_entities_in_attributes_(#276) - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(4),
    },
    {
        "OnAttribName",
        int(5),
        int(8),
    },
    {
        "OnAttribData",
        int(10),
        int(24),
    },
    {
        "OnAttribEntity",
        int32(8465),
    },
    {
        "OnAttribData",
        int(31),
        int(41),
    },
    {
        "OnAttribEnd",
        parser.QuoteType(3),
        int(42),
    },
    {
        "OnSelfClosingTag",
        int(43),
    },
    {
        "OnText",
        int(44),
        int(58),
    },
    {
        "OnTextEntity",
        int32(8465),
        int(65),
    },
    {
        "OnText",
        int(65),
        int(75),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_handle_entities/for_multi-byte_entities - 1]
[][]interface {}{
    {
        "OnTextEntity",
        int32(8807),
        int(21),
    },
    {
        "OnTextEntity",
        int32(824),
        int(21),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_handle_entities/for_trailing_legacy_entity - 1]
[][]interface {}{
    {
        "OnTextEntity",
        int32(10801),
        int(10),
    },
    {
        "OnTextEntity",
        int32(215),
        int(16),
    },
    {
        "OnText",
        int(16),
        int(19),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_not_break_after_special_tag_followed_by_an_entity/for_normal_special_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(6),
    },
    {
        "OnOpenTagEnd",
        int(6),
    },
    {
        "OnText",
        int(7),
        int(10),
    },
    {
        "OnCloseTag",
        int(12),
        int(17),
    },
    {
        "OnTextEntity",
        int32(39),
        int(24),
    },
    {
        "OnOpenTagName",
        int(25),
        int(27),
    },
    {
        "OnSelfClosingTag",
        int(28),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_not_break_after_special_tag_followed_by_an_entity/for_self-closing_special_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(6),
    },
    {
        "OnSelfClosingTag",
        int(8),
    },
    {
        "OnTextEntity",
        int32(39),
        int(15),
    },
    {
        "OnOpenTagName",
        int(16),
        int(18),
    },
    {
        "OnSelfClosingTag",
        int(19),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_not_lose_data_when_pausing - 1]
[][]interface {}{
    {
        "OnTextEntity",
        int32(38),
        int(5),
    },
    {
        "OnText",
        int(5),
        int(12),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_self-closing_special_tags/for_self-closing_script_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(7),
    },
    {
        "OnSelfClosingTag",
        int(9),
    },
    {
        "OnOpenTagName",
        int(11),
        int(14),
    },
    {
        "OnOpenTagEnd",
        int(14),
    },
    {
        "OnCloseTag",
        int(17),
        int(20),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_self-closing_special_tags/for_self-closing_style_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(6),
    },
    {
        "OnSelfClosingTag",
        int(8),
    },
    {
        "OnOpenTagName",
        int(10),
        int(13),
    },
    {
        "OnOpenTagEnd",
        int(13),
    },
    {
        "OnCloseTag",
        int(16),
        int(19),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_self-closing_special_tags/for_self-closing_textarea_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(9),
    },
    {
        "OnSelfClosingTag",
        int(11),
    },
    {
        "OnOpenTagName",
        int(13),
        int(16),
    },
    {
        "OnOpenTagEnd",
        int(16),
    },
    {
        "OnCloseTag",
        int(19),
        int(22),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_self-closing_special_tags/for_self-closing_title_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(6),
    },
    {
        "OnSelfClosingTag",
        int(8),
    },
    {
        "OnOpenTagName",
        int(10),
        int(13),
    },
    {
        "OnOpenTagEnd",
        int(13),
    },
    {
        "OnCloseTag",
        int(16),
        int(19),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_self-closing_special_tags/for_self-closing_xmp_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(4),
    },
    {
        "OnSelfClosingTag",
        int(6),
    },
    {
        "OnOpenTagName",
        int(8),
        int(11),
    },
    {
        "OnOpenTagEnd",
        int(11),
    },
    {
        "OnCloseTag",
        int(14),
        int(17),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_standard_special_tags/for_normal_script_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(7),
    },
    {
        "OnOpenTagEnd",
        int(7),
    },
    {
        "OnCloseTag",
        int(10),
        int(16),
    },
    {
        "OnOpenTagName",
        int(18),
        int(21),
    },
    {
        "OnOpenTagEnd",
        int(21),
    },
    {
        "OnCloseTag",
        int(24),
        int(27),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_standard_special_tags/for_normal_sitle_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(6),
    },
    {
        "OnOpenTagEnd",
        int(6),
    },
    {
        "OnCloseTag",
        int(9),
        int(14),
    },
    {
        "OnOpenTagName",
        int(16),
        int(19),
    },
    {
        "OnOpenTagEnd",
        int(19),
    },
    {
        "OnCloseTag",
        int(22),
        int(25),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_standard_special_tags/for_normal_style_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(6),
    },
    {
        "OnOpenTagEnd",
        int(6),
    },
    {
        "OnCloseTag",
        int(9),
        int(14),
    },
    {
        "OnOpenTagName",
        int(16),
        int(19),
    },
    {
        "OnOpenTagEnd",
        int(19),
    },
    {
        "OnCloseTag",
        int(22),
        int(25),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_standard_special_tags/for_normal_textarea_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(9),
    },
    {
        "OnOpenTagEnd",
        int(9),
    },
    {
        "OnCloseTag",
        int(12),
        int(20),
    },
    {
        "OnOpenTagName",
        int(22),
        int(25),
    },
    {
        "OnOpenTagEnd",
        int(25),
    },
    {
        "OnCloseTag",
        int(28),
        int(31),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_support_standard_special_tags/for_normal_xmp_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(4),
    },
    {
        "OnOpenTagEnd",
        int(4),
    },
    {
        "OnCloseTag",
        int(7),
        int(10),
    },
    {
        "OnOpenTagName",
        int(12),
        int(15),
    },
    {
        "OnOpenTagEnd",
        int(15),
    },
    {
        "OnCloseTag",
        int(18),
        int(21),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_treat_html_inside_special_tags_as_text/for_div_inside_script_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(7),
    },
    {
        "OnOpenTagEnd",
        int(7),
    },
    {
        "OnText",
        int(8),
        int(19),
    },
    {
        "OnCloseTag",
        int(21),
        int(27),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_treat_html_inside_special_tags_as_text/for_div_inside_style_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(6),
    },
    {
        "OnOpenTagEnd",
        int(6),
    },
    {
        "OnText",
        int(7),
        int(18),
    },
    {
        "OnCloseTag",
        int(20),
        int(25),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_treat_html_inside_special_tags_as_text/for_div_inside_textarea_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(9),
    },
    {
        "OnOpenTagEnd",
        int(9),
    },
    {
        "OnText",
        int(10),
        int(21),
    },
    {
        "OnCloseTag",
        int(23),
        int(31),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_treat_html_inside_special_tags_as_text/for_div_inside_title_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(6),
    },
    {
        "OnOpenTagEnd",
        int(6),
    },
    {
        "OnText",
        int(7),
        int(18),
    },
    {
        "OnCloseTag",
        int(20),
        int(25),
    },
    {
        "OnEnd",
    },
}
---
[TestTokenizer/should_treat_html_inside_special_tags_as_text/for_div_inside_xmp_tag - 1]
[][]interface {}{
    {
        "OnOpenTagName",
        int(1),
        int(4),
    },
    {
        "OnOpenTagEnd",
        int(4),
    },
    {
        "OnText",
        int(5),
        int(16),
    },
    {
        "OnCloseTag",
        int(18),
        int(21),
    },
    {
        "OnEnd",
    },
}
---
